fix #45 hide overflow-x to prevent scroll shifting while opening related questions on mobile
* we will need to be careful to show all content without horizontal scroll on body, if horizontal scroll is needed, add it to a deeper element

--- a/app/root.css
+++ b/app/root.css
@@ -52,6 +52,9 @@ html {
 }
 
 body {
+  /* overflow to avoid horizontal scrollbar when sliding related questions,
+   * which was shifting vertical scroll on mobile */
+  overflow-x: hidden;
   height: 100%;
   width: 100%;
   max-width: 1000px;
